--- a/contents/basic/code/weather/pages/index/index.wxss
+++ b/contents/basic/code/weather/pages/index/index.wxss
@@ -1,8 +1,29 @@
 /**index.wxss**/
 .temp {
-  margin-top: 300rpx;
   text-align: center;
   font-size: 200rpx;
   line-height: 280rpx;
   opacity: 0.8;
+}
+
+.weather {
+  text-align: center;
+  font-size: 40rpx;
+  line-height: 56rpx;
+  opacity: 0.65;
+}
+
+.weather-wrapper{
+  padding-top: 174rpx;
+  padding-bottom: 250rpx;
+  position: relative;
+}
+
+.weather-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
 }
