--- a/contents/basic/code/weather/pages/index/index.wxss
+++ b/contents/basic/code/weather/pages/index/index.wxss
@@ -1,9 +1,15 @@
 /**index.wxss**/
+.weather-wrapper{
+  position: relative;
+  padding-top: 174rpx;
+  padding-bottom: 250rpx;
+}
+
 .temp {
-  text-align: center;
-  font-size: 200rpx;
-  line-height: 280rpx;
-  opacity: 0.8;
+  text-align:center;
+  font-size:200rpx;
+  line-height:280rpx;
+  opacity:0.8;
 }
 
 .weather {
@@ -13,12 +19,6 @@
   opacity: 0.65;
 }
 
-.weather-wrapper{
-  padding-top: 174rpx;
-  padding-bottom: 250rpx;
-  position: relative;
-}
-
 .weather-bg {
   position: absolute;
   top: 0;
@@ -26,4 +26,53 @@
   width: 100%;
   height: 100%;
   z-index: -1;
+}
+
+.timetips {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 40rpx;
+  margin-bottom: 45rpx;
+}
+
+.timetips-icon {
+  margin-right: 10rpx;
+  width: 36rpx;
+  height: 28rpx;
+}
+
+.timetips-text {
+  font-size: 30rpx;
+  line-height: 42rpx;
+  opacity: 0.5;
+}
+
+.forecast-list {
+    display:flex
+}
+
+.forecast-item {
+    display:flex;
+    width: 120rpx;
+    flex-shrink: 0;
+    flex-direction:column;
+    align-items:center;
+}
+
+.forecast-time {
+  font-size: 30rpx;
+  line-height: 42rpx;
+}
+
+.forecast-weather {
+  margin-top: 50rpx;
+  margin-bottom: 50rpx;
+  width: 60rpx;
+  height: 60rpx;
+}
+
+.forecast-temp {
+  font-size: 40rpx;
+  line-height: 56rpx
 }
