--- a/contents/basic/code/weather/pages/list/list.wxml
+++ b/contents/basic/code/weather/pages/list/list.wxml
@@ -1,4 +1,9 @@
 <!--list.wxml-->
-<view class="weather-wrapper">
-  list
+<view class='date-item' wx:for="{{weekWeather}}">
+  <view class="date-wrapper">
+    <view class="day">{{item.day}}</view>
+    <view class="date">{{item.date}}</view>
+  </view>
+  <view class="temp">{{item.temp}}</view>
+  <image class="weather-icon" src="/images/sunny-icon.png"></image>
 </view>
