--- a/contents/basic/code/weather/pages/index/index.wxml
+++ b/contents/basic/code/weather/pages/index/index.wxml
@@ -1,5 +1,12 @@
 <!--index.wxml-->
 <view class="weather-wrapper">
+  <view class="location-wrapper" bindtap='onTapLocation'>
+    <view class="location">
+      <image class="location-icon" src="/images/location-icon.png"></image>
+      <view class="location-text">{{city}}</view>
+    </view>
+    <view class="location-tips">{{locationTipsText}}</view>
+  </view>
   <view class="temp">{{nowTemp}}°</view>
   <view class="weather">{{nowWeather}}</view>
   <image class="weather-bg" src="{{nowWeatherBackground}}" mode="scaleToFill"></image>
