--- a/contents/basic/code/news/pages/index/index.wxss
+++ b/contents/basic/code/news/pages/index/index.wxss
@@ -1,3 +1,88 @@
 /**index.wxss**/
 .news-wrapper{
 }
+
+.bar-wrap {
+    display: flex;
+    align-items:center;
+    text-align: center;
+    line-height: 90rpx;
+    font-size: 30rpx;
+}
+
+.bar-item {
+    padding: 0 40rpx;
+    flex-shrink: 0;
+}
+
+.list-zone {
+    padding: 0 20rpx;
+}
+
+.banner-item {
+    position: relative;
+    height: 360rpx;
+    background:pink;
+}
+
+.banner-item .bg-banner {
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    width: 100%;
+    height: 100%;
+}
+
+.banner-item .box {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 200rpx;
+    background: blue;
+    padding: 0 20rpx;
+    box-sizing: border-box;
+}
+
+.banner-item .box .title {
+    line-height:50rpx;
+    height:96rpx;
+    padding:20rpx 0;
+    font-size:36rpx;
+}
+
+.banner-item .box .bottom {
+    display: flex;
+    line-height:40rpx;
+    height:40rpx;
+    font-size: 30rpx;
+}
+
+.banner-item .time {
+    padding-left: 30rpx;
+}
+
+.list-item {
+    display: flex;
+    margin-top:25rpx;
+    background: green;
+    height: 170rpx;
+}
+
+.list-item .right {
+    margin: 20rpx 20rpx 0 0;
+    width: 200rpx;
+    height: 130rpx;
+    background: pink;
+}
+
+.list-item .left {
+    flex: 1;
+    padding-right: 20px;
+}
+
+.list-item .bottom {
+    line-height: 50rpx;
+    
+}
