--- a/contents/basic/code/news/app.wxss
+++ b/contents/basic/code/news/app.wxss
@@ -8,3 +8,186 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+
+.line2ovh {
+  word-wrap:break-word; 
+  word-break:break-all;
+  overflow:hidden; 
+  text-overflow:ellipsis;
+  -webkit-box-orient:vertical;
+  -webkit-line-clamp:2; 
+  display:-webkit-box;
+}
+
+.flex-box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: flex;
+}
+
+.flex {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.clearfix::before,
+.clearfix::after {
+  content: ' ';
+  display: block;
+  height: 0;
+  line-height: 0;
+  visibility: hidden;
+  clear: both;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+:focus {
+  outline: 0
+}
+
+.bd-l,
+.bd-r,
+.bd-b,
+.bd-t,
+.bd-all {
+  position: relative;
+}
+
+.bd-l::after {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 1px;
+  height: 100%;
+  background-image: -webkit-linear-gradient(270deg, #e0e0e0 50%, transparent 50%);
+  background-image: linear-gradient(270deg, #e0e0e0 50%, transparent 50%);
+}
+
+.bd-r::after {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 1px;
+  height: 100%;
+  background-image: -webkit-linear-gradient(90deg, #e0e0e0 50%, transparent 50%);
+  background-image: linear-gradient(90deg, #e0e0e0 50%, transparent 50%);
+}
+
+.bd-t::after {
+  content: " ";
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  height: 1px;
+  border-top: 1px solid #e0e0e0;
+  -webkit-transform-origin: 0 0;
+  transform-origin: 0 0;
+  -webkit-transform: scaleY(0.5);
+  transform: scaleY(0.5);
+}
+
+.bd-b::after {
+  content: " ";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  height: 1px;
+  border-top: 1px solid #e0e0e0;
+  -webkit-transform-origin: 0 0;
+  transform-origin: 0 0;
+  -webkit-transform: scaleY(0.5);
+  transform: scaleY(0.5);
+}
+
+.bd-all::after {
+  content: ' ';
+  width: 200%;
+  height: 200%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  border: 1px solid #d3d3d3;
+  transform-origin: 0 0;
+  -webkit-transform-origin: 0 0;
+  -ms-transform-origin: 0 0;
+  transform: scale(.5, .5);
+  -webkit-transform: scale(.5, .5);
+  -ms-transform: scale(.5, .5);
+}
+
+/* 垂直居中 */
+.vertical-middle-box {
+  position: relative;
+}
+
+.vertical-middle {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+}
+
+/* 水平居中 */
+.h-middle-box {
+  position: relative;
+}
+
+.h-middle {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+}
+
+/* 垂直水平居中 */
+.center-center {
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+}
+
+.ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 200rpx 0;
+  box-sizing: border-box;
+}
+
+.por {
+  position: relative;
+}
+
+.bold {
+  font-weight: 500
+}
