--- a/contents/basic/code/news/pages/index/index.wxss
+++ b/contents/basic/code/news/pages/index/index.wxss
@@ -1,7 +1,9 @@
 /**index.wxss**/
-.news-wrapper{
+.bar-wrap-scroll {
+    background: #54a2df;
+    position:fixed;
+    z-index:1;
 }
-
 .bar-wrap {
     display: flex;
     align-items:center;
@@ -13,6 +15,23 @@
 .bar-item {
     padding: 0 40rpx;
     flex-shrink: 0;
+    color: rgba(255,255,255,.8);
+    position: relative;
+}
+
+.bar-item .b-line {
+    position:absolute;
+    width:30rpx;
+    height:4rpx;
+    background:#fff;
+    bottom:12rpx;
+    left:50%;
+    margin-left:-15rpx;
+    display: none;
+}
+
+.bar-item.cur .b-line {
+    display: block;
 }
 
 .list-zone {
@@ -22,7 +41,6 @@
 .banner-item {
     position: relative;
     height: 360rpx;
-    background:pink;
 }
 
 .banner-item .bg-banner {
@@ -33,6 +51,7 @@
     right:0;
     width: 100%;
     height: 100%;
+    z-index:-1;
 }
 
 .banner-item .box {
@@ -40,13 +59,14 @@
     bottom: 0;
     width: 100%;
     height: 200rpx;
-    background: blue;
     padding: 0 20rpx;
     box-sizing: border-box;
+    color:#fff;
+    background: rgba(0,0,0,.2)
 }
 
 .banner-item .box .title {
-    line-height:50rpx;
+    line-height:54rpx;
     height:96rpx;
     padding:20rpx 0;
     font-size:36rpx;
@@ -57,6 +77,8 @@
     line-height:40rpx;
     height:40rpx;
     font-size: 30rpx;
+    color: rgba(255, 255, 255, 0.8);
+    padding-top:5rpx;
 }
 
 .banner-item .time {
@@ -66,15 +88,15 @@
 .list-item {
     display: flex;
     margin-top:25rpx;
-    background: green;
     height: 170rpx;
+    color:#999;
+    font-size: 28rpx;
 }
 
 .list-item .right {
     margin: 20rpx 20rpx 0 0;
     width: 200rpx;
     height: 130rpx;
-    background: pink;
 }
 
 .list-item .left {
@@ -84,5 +106,12 @@
 
 .list-item .bottom {
     line-height: 50rpx;
-    
+}
+
+.list-item .title {
+    padding:12rpx 0;
+    color:#666;
+    height: 104rpx;
+    box-sizing: border-box;
+    line-height:44rpx;
 }
