--- a/contents/projects/code/movie/client/pages/movie/detail/detail.wxml
+++ b/contents/projects/code/movie/client/pages/movie/detail/detail.wxml
@@ -3,7 +3,7 @@
 <view class='hot-card'>
   <view class='hot-name'>
     <image class='hot-name-line' src='/images/line-red.png'></image>
-    <view class='hot-name-text'>123{{productList[0].name}}</view>
+    <view class='hot-name-text'>{{productList[0].name}}</view>
     <image class='hot-name-line' src='/images/line-red.png'></image>
   </view>
   <image class='hot-info' src='/images/discount.png'></image>
