--- a/contents/projects/code/movie/client/pages/my/my.wxml
+++ b/contents/projects/code/movie/client/pages/my/my.wxml
@@ -1,28 +1,12 @@
-<!--pages/home/home.wxml-->
-<image src='/images/bg.png' class='bg'></image>
-<view class='hot-card'>
-  <view class='hot-name'>
-    <image class='hot-name-line' src='/images/line-red.png'></image>
-    <view class='hot-name-text'>{{productList[0].name}}</view>
-    <image class='hot-name-line' src='/images/line-red.png'></image>
-  </view>
-  <image class='hot-info' src='/images/discount.png'></image>
-  <image class='hot-image' src='{{productList[0].image}}'></image>
-</view>
-<view class='list-title'>
-  <image class='list-title-line' src='/images/line-black.png'></image>
-  <view class='list-title-text'>春季推荐</view>
-  <image class='list-title-line' src='/images/line-black.png'></image>
-</view>
+<!--pages/my/my.wxml-->
 
-<view class='product-row' wx:for='{{productList}}' wx:key='id' wx:if='{{index%2 === 1}}'>
-  <navigator class='product-card' wx:for='{{[productList[index], productList[index+1]]}}' wx:key='id' wx:for-index='pindex' wx:for-item='pitem' url="/pages/detail/detail?id={{pitem.id}}">
-    <image class='product-image' src='{{pitem.image}}' mode='widthFix'></image>
-    <view class='product-name'>{{pitem.name}}</view>
-    <view class='product-meta'>
-      <view class='product-money'>￥</view>
-      <view class='product-price'>{{pitem.price}}</view>
-      <view class='product-add' catchtap='addToTrolley' data-id="{{pitem.id}}">+</view>
-    </view>
-  </navigator>
+<view class='my-page'>
+  <!-- 收藏影评按钮 -->
+  <view class='toggle-btn'>收藏的影评</view>
+  <!-- 收藏影评列表 -->
+  <scroll-view class="my-main" scroll-y scroll-with-animation enable-back-to-top>
+    123
+  </scroll-view>
+  <!-- 回到首页按钮 -->
+  <view class='back-home-btn'>回到首页</view>
 </view>
