update: movie detail  page constructor

--- a/contents/projects/code/movie/client/pages/movie/hot/hot.wxml
+++ b/contents/projects/code/movie/client/pages/movie/hot/hot.wxml
@@ -1,6 +1,6 @@
 <!--pages/movie/hot/hot.wxml-->
 
-<view class='hot-page'>
+<view class='movie-hot-page'>
   <!-- 单个项目 -->
-  <view class='hot-item'>123</view>
+  <view class='movie-hot-item'>123</view>
 </view>
