--- a/contents/projects/code/movie/client/pages/comments/list/list.wxml
+++ b/contents/projects/code/movie/client/pages/comments/list/list.wxml
@@ -1,24 +1,7 @@
-<!--pages/comment/comment.wxml-->
-<view class='product-card'>
-  <image class='product-image' src='{{product.image}}'></image>
-  <view class='product-info'>
-    <view class='product-name'>{{product.name}}</view>
-    <view class='product-price'>￥ {{product.price}}</view>
-  </view>
-</view>
-<view class='comment-list'>
-  <view class='comment-title'>{{commentList.length}}条评价</view>
-  <view class='comment-card' wx:for='{{commentList}}' wx:key='id' wx:for-item='item'>
-    <image class='comment-avatar' src='{{item.avatar}}'></image>
-    <view class='comment-cnt'>
-      <view class='comment-top'>
-        <view class='comment-username'>{{item.username}}</view>
-        <view class="comment-time">{{item.createTime}}</view>
-      </view>
-      <view class='comment-content'>{{item.content}}</view>
-      <view class='preview-list' wx:if='{{item.images.length}}'>
-        <image class='preview-item' wx:for='{{item.images}}' wx:for-item='pitem' wx:key='*this' src='{{pitem}}' bindtap='previewImg' data-src='{{pitem}}' data-urls='{{item.images}}'></image>
-      </view>
-    </view>
-  </view>
-</view>
+<!--pages/comments/list/list.wxml-->
+<!-- 列表结构 -->
+<scroll-view class="comments-list-main" scroll-y scroll-with-animation enable-back-to-top>
+  
+</scroll-view>
+<!-- 底部按钮 -->
+<view class="comments-bottom-bar">回到首页</view>
