--- a/contents/projects/code/movie/client/pages/home/home.wxml
+++ b/contents/projects/code/movie/client/pages/home/home.wxml
@@ -2,13 +2,30 @@
 <view class='home-page'>
   <scroll-view class="home-main" scroll-y scroll-with-animation enable-back-to-top>
     <!-- 轮播图 -->
+    <view class="pic-play-box">
+      <swiper indicator-dots="{{indicatorDots}}"
+        autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+        <block wx:for="{{imgUrls}}">
+          <swiper-item>
+            <image src="{{item}}" class="slide-image" mode="widthFix" style="width:730rpx" />
+            <view class="movie-title">title</view>
+            <view class="movie-info">
+              <view class='p-icon'>头像</view>
+              <view class="recommend">{{123}} 给你推荐了一部电影</view>
+            </view>
+          </swiper-item>
+        </block>
+      </swiper>
+    </view>
     <!-- 标题 -->
+
     <!-- 推荐 -->
+
   </scroll-view>
 
   <view class='home-bottom flex-box'>
-    <view class='flex'>热门</view>
-    <view class='flex'>我的</view>
+    <link inner-text="热门" icon="" to="../movie/hot/hot" class-name="'flex'"></link>
+    <link inner-text="我的" icon="" to="../my/my" class-name="'flex'"></link>
   </view>
 </view>
 
