--- a/contents/projects/code/movie/client/pages/movie/detail/detail.wxss
+++ b/contents/projects/code/movie/client/pages/movie/detail/detail.wxss
@@ -1,125 +1,88 @@
-/* pages/home/home.wxss */
-.hot-card {
-  position: relative;
-  margin: 32rpx 52rpx 0;
-  height: 326rpx;
-  background: #FFFFFF;
-  box-shadow: 0 2rpx 13rpx 5rpx rgba(0, 0, 0, 0.02);
-  border-radius: 13rpx;
-}
+/* pages/detail/detail.wxss */
 
-.hot-name {
+.movie-detail-page {
   position: absolute;
-  display: flex;
-  align-items: center;
-  left: 44rpx;
-  top: 41rpx;
-  width: 300rpx;
-}
-
-.hot-name-line {
-  width: 24rpx;
-  height: 39rpx;
-}
-
-.hot-name-text {
-  margin: 0 20rpx;
-  font-size: 28rpx;
-  color: #34373D;
-  font-weight: bold;
-}
-
-.hot-info {
-  position: absolute;
-  width: 259rpx;
-  height: 188rpx;
-  left: 42rpx; 
+  top: 0;
+  left: 0;
+  right: 0;
   bottom: 0;
+  padding: 80rpx 30rpx 40rpx;
+  box-sizing: border-box;
 }
 
-.hot-image {
-  position: absolute;
-  top: 53rpx;
-  right: 47rpx;
-  width: 241rpx;
-  height: 241rpx;
-}
-
-.list-title {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 90rpx 0 35rpx;
-}
-
-.list-title-line {
-  width: 21rpx;
-  height: 34rpx;
-}
-
-.list-title-text {
-  margin: 0 20rpx;
-  font-size: 28rpx;
-  font-weight: bold;
-}
-
-.product-row {
-  display: flex;
-  justify-content: space-around; 
-  margin: 0 52rpx 28rpx;
-}
-
-.product-card {
-  flex: 1;
-  background: #FFFFFF;
-  box-shadow: 0 2rpx 13rpx 5rpx rgba(0, 0, 0, 0.02);
-  border-radius: 13rpx;
-}
-
-.product-card:first-child {
-  margin-right: 27rpx;
-}
-
-.product-image {
+.movie-detail-page .main {
   width: 100%;
-  border-radius: 13rpx 13rpx 0 0;
+  height: 100%;
+  background: #fff;
 }
 
-.product-name {
-  margin: 0 21rpx;
+.movie-detail-page .pic {
+  width: 200rpx;
+  height: 300rpx;
+  transform:translate3d(-50%, -44rpx, 0);
+  -webkit-transform:translate3d(-50%, -44rpx, 0);
+}
+
+.movie-detail-page .main-inner {
+  padding-top: 272rpx;
+  color: #888;
   font-size: 28rpx;
-  color: rgba(29, 29, 38, 0.8);
-  line-height: 40rpx;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 80rpx;
 }
 
-.product-meta {
-  display: flex;
-  align-items: center;
-  margin: 9rpx 21rpx 15rpx;
+.movie-detail-page .bottom-bar-wrap {
+  position: absolute;
+  left: 9%;
+  right: 9%;
+  bottom: 80rpx;
+  height: 76rpx;
+  line-height: 76rpx;
 }
 
-.product-money,
-.product-add {
-  width: 36rpx;
-  height: 36rpx;
-  line-height: 36rpx;
+.movie-detail-page .bottom-bar {
+  width: 100%;
   text-align: center;
-  border-radius: 50%;
-  color: #34373D;
-  font-weight: 900;
-  background: #F7E687;
 }
 
-.product-money {
-  font-size: 24rpx;
+.movie-detail-page .bottom-bar .flex:first-child {
+  margin-right: 3%;
 }
 
-.product-add {
-  font-size: 32rpx;
+.movie-detail-page .bottom-bar .flex:last-child {
+  margin-left: 3%;
 }
 
-.product-price {
-  flex: 1;
-  margin: 0 10rpx;
+.movie-detail-page .bottom-bar .flex {
+  background: pink;
   font-size: 28rpx;
+}
+
+.movie-detail-page .bottom-bar .flex view {
+  display: inline-block;
+}
+
+.movie-detail-page .bottom-bar .icon {
+  width: 60rpx;
+  height: 60rpx;
+  background: green;
+  margin: 0 10px;
+  vertical-align: top;
+  margin-top: 5px;
+}
+
+.movie-detail-page .main-inner .title {
+  font-size: 36rpx;
+  text-align: center;
+  line-height: 60rpx;
+  color: #333;
+  padding:0 80rpx;
+}
+
+.movie-detail-page .main-inner .dec {
+  margin: 0 60rpx;
+  color: #666;
 }
