--- a/contents/projects/code/movie/client/pages/comments/list/list.wxml
+++ b/contents/projects/code/movie/client/pages/comments/list/list.wxml
@@ -1,7 +1,43 @@
 <!--pages/comments/list/list.wxml-->
 <!-- 列表结构 -->
 <scroll-view class="comments-list-main" scroll-y scroll-with-animation enable-back-to-top>
-  
+  <navigator class="comments-item bd-b" url="/pages/comments/detail/detail?id={{1}}">
+    <view class='top'>
+        <image class='pic'></image>
+        <view class='name'> 123</view>
+    </view>
+    <block>
+      <!-- 文字 -->
+      <view class='bottom ellipsis' wx:if='{{true}}'>
+        wome的大背景
+      </view>
+      <!-- 语音 -->
+      <view class='bottom ellipsis' wx:if='{{false}}'>
+        voice
+      </view>
+    </block>
+  </navigator>
+
+  <navigator class="comments-item bd-b" url="/pages/comments/detail/detail?id={{1}}">
+    <view class='top'>
+        <image class='pic'></image>
+        <view class='name'> 123</view>
+    </view>
+    <block>
+      <!-- 文字 -->
+      <view class='bottom ellipsis' wx:if='{{false}}'>
+        wome的大背景
+      </view>
+      <!-- 语音 -->
+      <view class='bottom ellipsis' wx:if='{{true}}'>
+        voice
+      </view>
+    </block>
+  </navigator>
 </scroll-view>
 <!-- 底部按钮 -->
-<view class="comments-bottom-bar">回到首页</view>
+<view class="comments-bottom-bar">
+  <link inner-text="回到首页" to="../../home/home" is-home="true" class-name="'flex'"></link>
+</view>
+
+
