--- a/contents/projects/code/movie/client/app.wxss
+++ b/contents/projects/code/movie/client/app.wxss
@@ -248,3 +248,88 @@ page {
   color: #34373D;
   font-weight: bold;
 }
+
+/* 通用的样式表 move-common 包括: 电影详情、影评详情、编辑影评、影评预览 */
+
+.move-common {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 80rpx 30rpx 40rpx;
+  box-sizing: border-box;
+  box-shadow: 0 0 14rpx #ccc;
+}
+
+.move-common .main {
+  width: 100%;
+  height: 100%;
+  background: #fff;
+}
+
+.move-common .pic {
+  width: 200rpx;
+  height: 300rpx;
+  transform:translate3d(-50%, -44rpx, 0);
+  -webkit-transform:translate3d(-50%, -44rpx, 0);
+}
+
+.move-common .main-inner {
+  padding-top: 272rpx;
+  color: #888;
+  font-size: 28rpx;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 80rpx;
+}
+
+.move-common .bottom-bar-wrap {
+  position: absolute;
+  left: 9%;
+  right: 9%;
+  bottom: 80rpx;
+  height: 76rpx;
+  line-height: 76rpx;
+}
+
+.move-common .bottom-bar {
+  width: 100%;
+  text-align: center;
+}
+
+.movie-detail-page .bottom-bar .flex:first-child {
+  margin-right: 3%;
+}
+
+.move-common .bottom-bar .flex:last-child {
+  margin-left: 3%;
+}
+
+.move-common .bottom-bar .flex {
+  background: pink;
+  font-size: 28rpx;
+}
+
+.move-common .bottom-bar .flex view {
+  display: inline-block;
+}
+
+.move-common .bottom-bar .icon {
+  width: 60rpx;
+  height: 60rpx;
+  background: green;
+  margin: 0 10px;
+  vertical-align: top;
+  margin-top: 5px;
+}
+
+.move-common .main-inner .title {
+  font-size: 36rpx;
+  text-align: center;
+  line-height: 60rpx;
+  color: #333;
+  padding:0 80rpx;
+}
