--- a/contents/projects/code/movie/client/components/link/link.wxml
+++ b/contents/projects/code/movie/client/components/link/link.wxml
@@ -1,5 +1,5 @@
 <!-- 这是自定义组件的内部WXML结构 -->
 <navigator class="{{className}}" url="{{to}}">
-  <view class="link-icon" wx:if='{{icon}}'>12</view>
+  <view class="link-icon" wx:if='{{icon}}' style="background-image: {{'url(' + icon + ')'}}"></view>
   <view class="link-text">{{innerText}}</view>
 </navigator>
