--- a/contents/projects/code/movie/client/pages/my/my.wxml
+++ b/contents/projects/code/movie/client/pages/my/my.wxml
@@ -2,10 +2,21 @@
 
 <view class='my-page'>
   <!-- 收藏影评按钮 -->
-  <view class='toggle-btn'>收藏的影评</view>
+  <view class='toggle-btn'>收藏的影评 <view class='icon' style="background-image:{{'url(/images/down-arr.png)'}}"></view></view>
   <!-- 收藏影评列表 -->
   <scroll-view class="my-main" scroll-y scroll-with-animation enable-back-to-top>
-    123
+      <navigator class='move-item-card collected-movie clearfix' url="/pages/movie/detail/detail?id={{1}}">
+        <image class='pic' mode="scaleToFill" src='http://img1.imgtn.bdimg.com/it/u=1134080428,55002573&fm=26&gp=0.jpg'></image>
+        <view class="left right-side">
+          <view class='title ellipsis'>付</view>
+          <view wx-if="{{false}}" class='voice ellipsis'></view>
+          <view wx-if="true" class='text '>dsfsdfsdfs</view>
+          <view class='box clearfix'>
+            <view class='head-pic left'></view>
+            <view class='people left'>{{111}}</view>
+          </view>
+        </view>
+      </navigator>
   </scroll-view>
   <!-- 回到首页按钮 -->
   <view class='back-home-btn'>回到首页</view>
