--- a/contents/projects/code/movie/client/app.wxss
+++ b/contents/projects/code/movie/client/app.wxss
@@ -324,6 +324,7 @@ page {
     box-shadow: 0 0 2px #eee;
     border-radius: 5rpx;
     font-size: 28rpx;
+    border: 1px solid #ddd;
 }
 
 .move-common .bottom-bar .flex view {
