--- a/contents/projects/code/movie/client/app.wxss
+++ b/contents/projects/code/movie/client/app.wxss
@@ -332,12 +332,14 @@ page {
 }
 
 .move-common .bottom-bar .icon {
-    width: 60rpx;
-    height: 60rpx;
-    background: green;
-    margin: 0 10px;
-    vertical-align: top;
-    margin-top: 5px;
+    background:no-repeat top;
+    background-size: 100% auto;
+    width:50rpx;
+    height: 50rpx;
+    vertical-align:top;
+    display:inline-block;
+    margin-top:10rpx;
+    margin-left:-7%;
 }
 
 .move-common .main-inner .title {
