--- a/contents/projects/code/movie/client/app.wxss
+++ b/contents/projects/code/movie/client/app.wxss
@@ -260,9 +260,9 @@ page {
 }
 
 
-/* 通用的样式表 move-common 包括: 电影详情、影评详情、编辑影评、影评预览 */
+/* 通用的样式表 movie-common 包括: 电影详情、影评详情、编辑影评、影评预览 */
 
-.move-common {
+.movie-common {
     position: absolute;
     top: 0;
     left: 0;
@@ -273,21 +273,21 @@ page {
     box-shadow: 0 0 14rpx #ccc;
 }
 
-.move-common .main {
+.movie-common .main {
     width: 100%;
     height: 100%;
     background: #fff;
     box-shadow: 0 0 5rpx #eee;
 }
 
-.move-common .pic {
+.movie-common .pic {
     width: 200rpx;
     height: 300rpx;
     transform: translate3d(-50%, -44rpx, 0);
     -webkit-transform: translate3d(-50%, -44rpx, 0);
 }
 
-.move-common .main-inner {
+.movie-common .main-inner {
     padding-top: 272rpx;
     color: #888;
     font-size: 28rpx;
@@ -298,7 +298,7 @@ page {
     top: 80rpx;
 }
 
-.move-common .bottom-bar-wrap {
+.movie-common .bottom-bar-wrap {
     position: absolute;
     left: 9%;
     right: 9%;
@@ -307,7 +307,7 @@ page {
     line-height: 76rpx;
 }
 
-.move-common .bottom-bar {
+.movie-common .bottom-bar {
     width: 100%;
     text-align: center;
 }
@@ -316,22 +316,22 @@ page {
     margin-right: 3%;
 }
 
-.move-common .bottom-bar .flex:last-child {
+.movie-common .bottom-bar .flex:last-child {
     margin-left: 3%;
 }
 
-.move-common .bottom-bar .flex {
+.movie-common .bottom-bar .flex {
     box-shadow: 0 0 2px #eee;
     border-radius: 5rpx;
     font-size: 28rpx;
     border: 1px solid #ddd;
 }
 
-.move-common .bottom-bar .flex view {
+.movie-common .bottom-bar .flex view {
     display: inline-block;
 }
 
-.move-common .bottom-bar .icon {
+.movie-common .bottom-bar .icon {
     background:no-repeat top;
     background-size: 100% auto;
     width:50rpx;
@@ -342,7 +342,7 @@ page {
     margin-left:-7%;
 }
 
-.move-common .main-inner .title {
+.movie-common .main-inner .title {
     font-size: 36rpx;
     text-align: center;
     line-height: 60rpx;
@@ -350,7 +350,7 @@ page {
     padding: 0 80rpx;
 }
 
-.move-item-card {
+.movie-item-card {
     height: 250rpx;
     overflow: hidden;
     position: relative;
@@ -359,7 +359,7 @@ page {
     margin-bottom: 30rpx;
 }
 
-.move-item-card .pic {
+.movie-item-card .pic {
     width: 180rpx;
     height: 100%;
     position: absolute;
