--- a/contents/projects/code/movie/client/pages/movie/hot/hot.wxml
+++ b/contents/projects/code/movie/client/pages/movie/hot/hot.wxml
@@ -2,7 +2,7 @@
 
 <view class='movie-hot-page'>
   <!-- 单个项目 -->
-  <navigator class='movie-hot-item move-item-card clearfix' url="/pages/movie/detail/detail?id={{1}}">
+  <navigator class='movie-hot-item movie-item-card clearfix' url="/pages/movie/detail/detail?id={{1}}">
     <image class='pic' mode="scaleToFill" src='http://img1.imgtn.bdimg.com/it/u=1134080428,55002573&fm=26&gp=0.jpg'></image>
     <view class="left text">
       <view class='title ellipsis'>付</view>
@@ -10,7 +10,7 @@
     </view>
   </navigator>
 
-  <navigator class='movie-hot-item move-item-card clearfix' url="/pages/movie/detail/detail?id={{1}}">
+  <navigator class='movie-hot-item movie-item-card clearfix' url="/pages/movie/detail/detail?id={{1}}">
     <image class='pic' mode="scaleToFill" src='http://img1.imgtn.bdimg.com/it/u=1134080428,55002573&fm=26&gp=0.jpg'></image>
     <view class="left text">
       <view class='title ellipsis'>付</view>
