--- a/contents/projects/code/movie/client/pages/my/my.wxml
+++ b/contents/projects/code/movie/client/pages/my/my.wxml
@@ -5,7 +5,7 @@
   <view class='toggle-btn'>收藏的影评 <view class='icon' style="background-image:{{'url(/images/down-arr.png)'}}"></view></view>
   <!-- 收藏影评列表 -->
   <scroll-view class="my-main" scroll-y scroll-with-animation enable-back-to-top>
-      <navigator class='move-item-card collected-movie clearfix' url="/pages/movie/detail/detail?id={{1}}">
+      <navigator class='movie-item-card collected-movie clearfix' url="/pages/movie/detail/detail?id={{1}}">
         <image class='pic' mode="scaleToFill" src='http://img1.imgtn.bdimg.com/it/u=1134080428,55002573&fm=26&gp=0.jpg'></image>
         <view class="left right-side">
           <view class='title ellipsis'>付</view>
