update: adjust css

--- a/contents/projects/code/movie/client/pages/comments/detail/detail.wxml
+++ b/contents/projects/code/movie/client/pages/comments/detail/detail.wxml
@@ -32,7 +32,7 @@
         </navigator>
         <view class='flex' bindtap="openActionsheet">
           <view class='icon' style="background-image:{{'url(/images/pen.png)'}}"></view>
-          <view>添加影评</view>
+          <view>写影评</view>
         </view>
       </view>
     </view>
