--- a/contents/projects/code/movie/client/pages/movie/detail/detail.wxss
+++ b/contents/projects/code/movie/client/pages/movie/detail/detail.wxss
@@ -11,5 +11,6 @@
     width: 50rpx;
     vertical-align: top;
     display: inline-block;
-    margin-top: 10rpx;
+    margin-top: 14rpx;
+    margin-right: 10rpx;
 }
