update: UI elements

--- a/contents/projects/code/movie/client/pages/comments/edit/edit.wxml
+++ b/contents/projects/code/movie/client/pages/comments/edit/edit.wxml
@@ -1,4 +1,29 @@
 <!--pages/comments/edit/edit.wxml-->
-<view class='comments-edit-page'>
-  
+<view class='comments-edit-page movie-common'>
+  <!-- 图片信息 -->
+  <image class='pic left h-middle' mode="scaleToFill" src='http://img1.imgtn.bdimg.com/it/u=1134080428,55002573&fm=26&gp=0.jpg'></image>
+  <view class='main'>
+    <scroll-view class="main-inner" scroll-y scroll-with-animation enable-back-to-top>
+      <!-- 主标题  -->
+      <view class='title ellipsis'>妇联</view>
+      <!-- 语音和文字输入区域 -->
+      <view class='comments-input-box'>
+        <view class="box-main">
+           <!-- 语音和文字的区别 -->
+           <block>
+            <view class="text-zone">
+            
+            </view>
+            <view class="voice-zone">
+            
+            </view>
+           </block>    
+        </view>
+      </view>
+    </scroll-view>
+    <!-- 底部按钮 完成 -->
+    <view class='bottom-finish-btn'>
+        完成
+    </view>
+  </view>
 </view>
