--- a/contents/projects/code/movie/client/pages/comments/edit/edit.wxss
+++ b/contents/projects/code/movie/client/pages/comments/edit/edit.wxss
@@ -102,8 +102,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  height: 80rpx;
-  line-height: 80rpx;
+  height: 90rpx;
+  line-height: 90rpx;
   text-align: center;
   background: rgb(0, 189, 0);
   color: #fff;
@@ -112,4 +112,58 @@
 
 .comments-edit-page.movie-common {
   padding-bottom: 140rpx;
+}
+
+.comments-input-box .text-zone {
+  padding-top: 40rpx;
+}
+
+.comments-input-box .text-zone textarea {
+  text-align: center;
+  line-height: 50rpx;
+  padding: 20rpx 50rpx;
+  font-size: 32rpx;
+  height: 120rpx;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.comments-input-box .text-zone::-webkit-input-placeholder {
+  line-height: 100rpx;
+  font-size: 32rpx;
+  position: relative;
+  top: -10rpx;
+}
+
+.comments-input-box .voice-zone {
+  padding-top: 80rpx;
+  text-align: center;
+}
+
+.comments-input-box .voice-btn {
+  border: 1px solid #b9c5d0;
+  width: 240rpx;
+  height: 80rpx;
+  line-height: 80rpx;
+  font-size: 32rpx;
+  color: #b9c5d0;
+  display: inline-block;
+  border-radius: 5rpx;
+}
+
+.comments-input-box .voice-icon {
+  width: 20px;
+  height: 30px;
+  background: no-repeat center;
+  background-size: 100% auto;
+  display: inline-block;
+}
+
+.comments-input-box .voice-text {
+  text-align: cneter;
+  vertical-align: top;
+  margin-top: 0;
+  display: inline-block;
+  padding-left: 10rpx;
+  line-height: 80rpx;
 }
