[test] mpvue使用原生小程序组件报错

--- a/contents/projects/code/movie/client/pages/comments/detail/detail.wxml
+++ b/contents/projects/code/movie/client/pages/comments/detail/detail.wxml
@@ -19,7 +19,10 @@
             <view class="voice-zone">
             
             </view>
-           </block>    
+           </block>  
+           <!-- 测试代码   -->
+          <servant treedata="{{treedata}}" depth="0"></servant>
+
         </view>
       </view>
     </scroll-view>
