--- a/contents/projects/code/movie/client/pages/home/home.wxml
+++ b/contents/projects/code/movie/client/pages/home/home.wxml
@@ -5,11 +5,11 @@
     <view class="pic-play-box">
       <swiper indicator-dots="{{indicatorDots}}"
         autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-        <block wx:for="{{imgUrls}}">
+        <block wx:for="{{homeList}}">
           <swiper-item>
-            <image src="{{item}}" class="slide-image" mode="widthFix" style="width:730rpx" />
-            <view class="movie-title">title</view>
-            <view class="movie-info">
+            <image src="{{item.image}}" class="slide-image" mode="widthFix" style="width:730rpx" />
+            <view class="movie-title">{{item.title}}</view>
+            <view class="movie-info" wx:if="{{false}}">
               <view class='p-icon'></view>
               <view class="recommend">{{123}} 给你推荐了一部电影</view>
             </view>
